--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 display: flex;
                 flex-direction: column;
                 max-height: 200px;
+                max-width: 350px;
                 overflow-x: scroll;
                 /* overflow: auto; */
             }
