--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
                 display: flex;
                 flex-direction: column;
                 max-height: 200px;
-                max-width: 350px;
                 overflow-x: scroll;
-                /* overflow: auto; */
+                overflow: auto;
             }
 
             .pdf-view.unscroll {
