--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             }
 
             .pdf-view {
-                display: flex;
-                flex-direction: column;
+                max-width: 600px;
                 max-height: 200px;
                 overflow-x: scroll;
                 overflow: auto;
