--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             referrerpolicy="no-referrer"
         ></script>
         <script>
-            viewPdf("9112716163925.pdf", selectEl("#pdf_view_01 .pdf-view"));
+            viewPdf("example.pdf", selectEl("#pdf_view_01 .pdf-view"));
             // 9112716163925
             function viewPdf(url, container) {
                 const loadingTask = pdfjsLib.getDocument(url);
