--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             referrerpolicy="no-referrer"
         ></script>
         <script>
-            viewPdf("9112716163925.pdf", selectEl("#pdf_view_01 .pdf-view"));
+            viewPdf("example.pdf", selectEl("#pdf_view_01 .pdf-view"));
             // 9112716163925
             function viewPdf(url, container) {
                 const loadingTask = pdfjsLib.getDocument(url);
@@ -78,15 +78,15 @@
                             viewCanvas.height = viewport.height ;
                             viewCanvas.width = viewport.width;
 
-                            // const zoom = 2;
-                            // viewCanvas.height = viewport.height * zoom ;
-                            // viewCanvas.width = viewport.width * zoom;
-                            // viewCanvas.style.height = viewport.height + 'px';
-                            // viewCanvas.style.width = viewport.width + 'px';
+                            const zoom = 2;
+                            viewCanvas.height = viewport.height * zoom ;
+                            viewCanvas.width = viewport.width * zoom;
+                            viewCanvas.style.height = viewport.height + 'px';
+                            viewCanvas.style.width = viewport.width + 'px';
                             const renderContext = {
                                 canvasContext: context,
                                 viewport,
-                                // transform: [zoom, 0, 0, zoom, 0, 0]
+                                transform: [zoom, 0, 0, zoom, 0, 0]
                             };
                             page.render(renderContext);
                             container.appendChild(viewCanvas);
