--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                             viewCanvas.height = viewport.height ;
                             viewCanvas.width = viewport.width;
 
-                            const zoom = 2;
-                            viewCanvas.height = viewport.height * zoom ;
-                            viewCanvas.width = viewport.width * zoom;
-                            viewCanvas.style.height = viewport.height + 'px';
-                            viewCanvas.style.width = viewport.width + 'px';
+                            // const zoom = 2;
+                            // viewCanvas.height = viewport.height * zoom ;
+                            // viewCanvas.width = viewport.width * zoom;
+                            // viewCanvas.style.height = viewport.height + 'px';
+                            // viewCanvas.style.width = viewport.width + 'px';
                             const renderContext = {
                                 canvasContext: context,
                                 viewport,
-                                transform: [zoom, 0, 0, zoom, 0, 0]
+                                // transform: [zoom, 0, 0, zoom, 0, 0]
                             };
                             page.render(renderContext);
                             container.appendChild(viewCanvas);
