--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                             const viewCanvas = document.createElement("canvas");
                             const context = viewCanvas.getContext("2d");
 
+                            viewCanvas.height = viewport.height ;
+                            viewCanvas.width = viewport.width;
+
                             const zoom = 2;
                             viewCanvas.height = viewport.height * zoom ;
                             viewCanvas.width = viewport.width * zoom;
